--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // 핵심 JWT 인터페이스 & 빌더 API
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5' // 실제 JWT 구현체
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT를 JSON으로 직렬화/역직렬화 하는데 사용
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
-    // Redis
+	implementation "com.openai:openai-java:4.12.0"
+
+	// Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
